トップページ表示

--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -5,7 +5,7 @@
 <div class="wrapper">
 
   <%#メインフォーム部分 %>
-  <%= render "shared/main_form" %>
+  <%#= render "shared/main_form" %>
   <%#メインフォーム部分 %>
     
   <%# 詳細ページフォーム %>
@@ -13,6 +13,6 @@
   <%# 詳細ページフォーム %>
 
   <%#サイドフォーム部分%>
-  <%= render "shared/side_form" %>
+  <%#= render "shared/side_form" %>
   <%#サイドフォーム部分%>
 </div>
