--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
           <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
             <div class="form-group">
               <label for="Name">名前</label>
-              <%= f.email_field :name, id:"Name", placeholder:"Name", class: "form-control" %>
+              <%= f.text_field :name, id:"Name", placeholder:"Name", class: "form-control" %>
             </div>
             
             <div class="form-group">
